crates/vize_glyph/tests/snapshots/preserve_authored_content__comments_follow_their_block_when_sfc_blocks_are_sorted.snap
---
source: crates/vize_glyph/tests/preserve_authored_content.rs
expression: formatted
---
<!-- script note -->
<script setup>
const ready = true;
</script>

<!-- template note -->
<template>
  <div>ok</div>
</template>
