crates/vize_glyph/tests/snapshots/preserve_authored_content__css_comment_keeps_preceding_blank_line.snap
---
source: crates/vize_glyph/tests/preserve_authored_content.rs
expression: formatted
---
.a {
  color: red;
}

/* second */
.b {
  color: blue;
}
