crates/vize_glyph/tests/snapshots/preserve_authored_content__css_formatting_keeps_media_features_values_and_nested_selectors.snap
---
source: crates/vize_glyph/tests/preserve_authored_content.rs
expression: formatted
---
.box {
  margin: 1px 0 1px 0;
  border: solid 1px;
}

.box::before {
  content: "";
}

@media screen and (max-width: 600px) {
  .box {
    color: blue;
  }
}

.parent {
  .child {
    color: red;
  }
}
