crates/vize_glyph/tests/snapshots/preserve_authored_content__keeps_comments_between_and_after_sfc_blocks.snap
---
source: crates/vize_glyph/tests/preserve_authored_content.rs
expression: formatted
---
<script setup lang="ts">
const label = "hello";
</script>

<!-- NOTE: this comment explains the template below -->
<template>
  <div class="box">{{ label }}</div>
</template>

<!-- NOTE: keep the closing note too -->
