crates/vize_glyph/tests/snapshots/preserve_authored_content__retains_authored_css_color_spellings.snap
---
source: crates/vize_glyph/tests/preserve_authored_content.rs
expression: formatted
---
.box {
  color: grey;
  border: 1px solid lightgrey;
}
