crates/vize_glyph/tests/snapshots/preserve_authored_content__retains_authored_css_color_spellings_in_sfc.snap
---
source: crates/vize_glyph/tests/preserve_authored_content.rs
expression: formatted
---
<template>
  <div class="box" />
</template>

<style scoped>
.box {
  color: grey;
  border: 1px solid lightgrey;
}
</style>
