crates/vize_glyph/tests/snapshots/preserve_authored_content__retains_color_functions_and_hex_without_touching_strings_or_urls.snap
---
source: crates/vize_glyph/tests/preserve_authored_content.rs
expression: formatted
---
.box {
  color: #D3D3D3;
  background: linear-gradient(rgb(255 0 0), lightgrey);
  content: "grey";
  background-image: url(/grey.svg);
}
