crates/vize_glyph/tests/snapshots/preserve_authored_content__scoped_css_keeps_implicit_nested_selectors.snap
---
source: crates/vize_glyph/tests/preserve_authored_content.rs
expression: formatted
---
<template>
  <div class="p" />
</template>

<style scoped>
.p {
  :deep(.child) {
    color: red;
  }
  .q {
    color: blue;
  }
}
</style>
